fix(PDS-1903): update z-index for hero main

--- a/packages/site-hero/src/components/HeroMain/styles.module.scss
+++ b/packages/site-hero/src/components/HeroMain/styles.module.scss
@@ -142,5 +142,6 @@
 }
 
 .navbarWrapper {
-  width: 100%;
+  /* stylelint-disable-next-line declaration-property-value-allowed-list */
+  z-index: 5;
 }
